css/gameAnalysis.css
.game-analysis-view {
	min-height: 0px;
	width: 100dvw;

	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(max(calc(50vw - 25px), 55vmin), 1fr));
}

.quarterly-score {
	height: 225px;
	width: 100%;

	display: flex;
	justify-content: center;
	align-items: center;

	transform: scale(1.75);

	grid-column: 1 / -1;

	pointer-events: none;
}

.quarterly-score table {
	margin: 0 5dvw;

	border-collapse: collapse;

	font-weight: bold;
}

.quarterly-score table tr * {
	padding: 5px 0px;
}

.quarterly-score table tr:first-child {
	border-bottom: 1px solid white;
}

.quarterly-score table *:not(:last-child) {
	padding-right: 20px;
}

.quarterly-score table tr *:first-child {
	padding-left: 10px;
}

.quarterly-score table tr *:last-child {
	padding: 0px 10px 0px 20px;
	border-left: 1px solid white;
}

.quarterly-score table * {
	color: white;
}

.quarterly-score .away-team-score,
.quarterly-score .home-team-score {
	text-align: center;
}

@media (max-width: 750px) {
	.quarterly-score {
		height: 100px;
		transform: scale(1);
	}
}

.game-analysis-view h1 {
	font-size: max(2.5vw, 3.5vh);
	text-decoration: underline;
	text-decoration-color: #d4a017;
	text-align: center;

	margin: 25px 0px 3px;
}

.game-analysis-view > h1 {
	grid-column: 1 / -1;
}

.team-leaders {
	width: 100%;
	height: max(25vh, 150px);

	display: flex;
	justify-content: space-evenly;
	align-items: center;

	margin-bottom: 3vw;
}

.team-leaders .leader {
	width: 30dvw;

	position: relative;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.team-leaders .leader div:first-child:has(img) {
	position: relative;
}

.team-leaders .leader img:first-child {
	min-height: 80px;
	height: 13vh;

	border-radius: 40%;

	-webkit-filter: drop-shadow(1px 1px 0 white) drop-shadow(1px -1px 0 white) drop-shadow(-1px -1px 0 white) drop-shadow(-1px 1px 0 white);
	filter: drop-shadow(1px 1px 0 white) drop-shadow(1px -1px 0 white) drop-shadow(-1px -1px 0 white) drop-shadow(-1px 1px 0 white);
}

.team-leaders .leader img:last-child {
	position: absolute;
	bottom: -0.2vw;
	right: max(10px, 1vmin);

	min-height: 20px;
	height: 5.5vh;

	-webkit-filter: drop-shadow(1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black) drop-shadow(-1px 1px 0 black);
	filter: drop-shadow(1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black) drop-shadow(-1px 1px 0 black);
}

.team-leaders .leader div:not(:first-child) {
	width: 70%;

	text-align: center;
	font-weight: bold;

	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;

	font-size: 1.5vmax;

	text-shadow: 0px 0px 7px black;
}

.team-leaders .leader div:nth-child(2) {
	margin-top: 5px;
	padding: 0px 7px;
}

.team-leaders .leader div:last-child {
	color: #d4a017;
	font-size: max(1.75vw, 2vh);
}

.cumulative-score,
.win-probability {
	padding: 0px 3vw;
}

.cumulative-score-graph,
.win-probability-graph {
	transition: opacity 300ms ease;
}

